# SLAM-2D-MAPPING-CAR

./: README.md
slamurai_bringup/: CMakeLists.txt  package.xml
slamurai_bringup/launch/: real_robot.launch.py  sim_robot.launch.py
slamurai_controller/: CMakeLists.txt  package.xml
slamurai_controller/confi/: slamurai_controllers.yaml  teleop_twist_keyboard.yaml
slamurai_controller/launch/: controller.launch.py  teleop_keyboard.launch.py
slamurai_controller/slamurai_controller/: twist_to_twiststamped.py
slamurai_description/: CMakeLists.txt  package.xml
slamurai_description/launch/: display.launch.py  gazebo.launch.py
slamurai_description/meshes/: IMU_1.stl  base_link.stl  camera_1.stl  cpu_1.stl  lidar_1.stl  mega_1.stl  motor_driver_1.stl  supportA_1.stl  supportB_1.stl  supportC_1.stl  supportD_1.stl  top_link_1.stl  wheel_1.stl  wheel_2.stl  wheel_3.stl  wheel_4.stl
slamurai_description/rviz/: display.rviz
slamurai_description/urdf/: slamurai.urdf.xacro  slamurai_gazebo.xacro  slamurai_ros2_control.xacro
slamurai_description/worlds/: custom_world.world  my_world.world
slamurai_firmware/: CMakeLists.txt  package.xml  slamurai_interface.xml
slamurai_firmware/launch/: hardware_interface.launch.py
slamurai_firmware/src/: slamurai_interface.cpp
slamurai_localization/: CMakeLists.txt  package.xml
slamurai_localization/config/: ekf.yaml
slamurai_localization/launch/: global_localization.launch.py  local_localization.launch.py
slamurai_mapping/: CMakeLists.txt  package.xml
slamurai_mapping/launch/: slam.launch.py
(+7 files in other folders)
